Add a test for resolving names of submodules
There is a weird interaction going on somewhere in the system,
this patch adds a test to see what is going on.

Change-Id: Icccffe90fd9a55a4175e47f6ab314adfec2c76e4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>